Closed
Bug 570866
Opened 11 years ago
Closed 11 years ago
Intermittent pseudo-classes-01.svg | assertion count 1 is more than expected 0 from "ASSERTION: Visited style has wrong parent"
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: philor, Assigned: bzbarsky)
References
Details
(Keywords: intermittent-failure)
http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1276036140.1276039908.12303.gz Linux mozilla-central debug test reftest on 2010/06/08 15:29:00 s: moz2-linux-slave14 ###!!! ASSERTION: Visited style has wrong parent: 'Error', file /builds/slave/mozilla-central-linux-debug/build/layout/base/nsFrameManager.cpp, line 641 mozilla::layers::LayerManager::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::LayerManager::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::LayerManager::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::LayerManager::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::Layer::IntersectClipRect(nsIntRect const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::Layer::IntersectClipRect(nsIntRect const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::Layer::IntersectClipRect(nsIntRect const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::Layer::IntersectClipRect(nsIntRect const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) mozilla::layers::Layer::IntersectClipRect(nsIntRect const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) gfxUserFontSet::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) gfxUserFontSet::AddRef() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) NS_GetComponentManager_P (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) NS_GetComponentManager_P (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) NS_GetComponentManager_P (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) __gnu_cxx::hash_map<int, mozilla::ipc::AsyncChannel::AsyncListener*, __gnu_cxx::hash<int>, std::equal_to<int>, std::allocator<mozilla::ipc::AsyncChannel::AsyncListener*> >::hash_map() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) std::vector<std::pair<int, int>, std::allocator<std::pair<int, int> > >::~vector() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) std::map<std::string, Histogram*, std::less<std::string>, std::allocator<std::pair<std::string const, Histogram*> > >::operator[](std::string const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) std::map<std::string, Histogram*, std::less<std::string>, std::allocator<std::pair<std::string const, Histogram*> > >::operator[](std::string const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) std::map<std::string, Histogram*, std::less<std::string>, std::allocator<std::pair<std::string const, Histogram*> > >::operator[](std::string const&) (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) gfxPlatformGtk::GetPlatform() (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) DumpJSStack (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) XRE_main (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/libxul.so) UNKNOWN (/builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/firefox/firefox-bin) __libc_start_main (/usr/src/debug/glibc-2.5-20061008T1257/csu/libc-start.c:262) frame: SVGPathGeometry(rect)(3) (0xac26508) style: 0xa3f4500 {} REFTEST TEST-PASS | file:///builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/reftest/tests/layout/reftests/svg/pseudo-classes-01.svg | REFTEST INFO | Loading a blank page ++DOMWINDOW == 10 (0xa7541b4) [serial = 10332] [outer = 0x8d91f20] REFTEST TEST-UNEXPECTED-FAIL | file:///builds/moz2_slave/mozilla-central-linux-debug-unittest-reftest/build/reftest/tests/layout/reftests/svg/pseudo-classes-01.svg | assertion count 1 is more than expected 0 assertions
![]() |
Assignee | |
Comment 1•11 years ago
|
||
Yep. Bogus assert. Pushed http://hg.mozilla.org/mozilla-central/rev/d743cad887b5 to fix.
Assignee: nobody → bzbarsky
Status: NEW → RESOLVED
Closed: 11 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Updated•8 years ago
|
Keywords: intermittent-failure
Updated•8 years ago
|
Whiteboard: [orange]
You need to log in
before you can comment on or make changes to this bug.
Description
•