Bug 570866.  De-bogify the assertion.